- fix typo - add native access for Lucene - remove unused install4j-runtime in MV - use Liberica JDK in all install4j builds